# OSINT.3

./: .env.example  .gitignore  ARCHITECTURE_OSINTOMEGA.md  CONTRIBUTING.md  Dockerfile  ETHICS.md  README.md  config.yaml  docker-compose.yml  etat_art_api_web_profond_2026.md  index.html  install.sh  missing_person_pipeline.py  omega.py  requirements.txt
.github/workflows/: ci.yml  pages.yml
app/: main.py  worker.py
app/domain/: osint_module.py
app/pipelines/: missing_person_pipeline.py
app/static/: app.js  index.html  styles.css
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/application/: ports.py
backend/app/application/use_cases/: run_module.py
backend/app/domain/: audit.py  scope.py
backend/app/domain/modules/: __init__.py  base.py  registry.py
backend/app/infrastructure/: config.py
backend/app/infrastructure/audit/: in_memory.py
backend/app/infrastructure/modules/: __init__.py  domain_lookup.py  omega_orchestrator.py
backend/app/presentation/: dependencies.py  main.py
backend/app/presentation/routers/: modules.py
backend/tests/: test_api.py  test_domain_lookup.py  test_omega_orchestrator.py  test_run_module_use_case.py
docs/: INTEGRATION.md  prompt_systeme_osint_omega_ai_consolide.md  synthese_operationnelle_2026-04-29.md
docs/app/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
docs/app/lib/: detect.js  gate.js  graph.js  history.js  links.js  selftest.js  suggest.js  tools.js
docs/prototype/: index.html
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: sw.js
infrastructure/plugins/: __init__.py  _http.py  ahmia_plugin.py  eyeofweb_plugin.py  hibp_plugin.py  holehe_plugin.py  insightface_plugin.py  intelx_plugin.py  telegram_plugin.py  wayback_plugin.py  whatsmyname_plugin.py
monitoring/: prometheus.yml
osint_omega/: README.md  conftest.py  pyproject.toml
osint_omega/osint_omega/: __init__.py  __main__.py  cache.py  cli.py  config.py  engine.py  gate.py  types.py
osint_omega/osint_omega/agents/: README.md  __init__.py  system_prompt.md  system_prompt.xml
osint_omega/osint_omega/tools/: __init__.py  base.py  crtsh.py  domain_syntax.py  external.py  hibp.py
osint_omega/tests/: test_agents.py  test_cache.py  test_cli.py  test_domain_syntax.py  test_engine.py  test_gate.py
reports/: synthese_operationnelle_939_AVS_2026-04-29.md
tests/: test_pipeline.py  test_web_console.py
(+12 files in other folders)
